--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "firebase": "^11.6.0",
+    "fs": "^0.0.1-security",
     "lucide-react": "^0.488.0",
+    "path": "^0.12.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.0"
